2015-11-29
 * G(PL)-Point telescope pointing modelling
 * rts2-model options for GPoint
 * TLE and MPEC targets executed with proper commands passed to telescope

2015-08-04
 * integrated Project Pluto (http://www.projectpluto.com/sat_code.html) code for TLE

2014-07-26
 * renamed XMLRPCD to HTTPD

2014-07-21
 * extensive update of teld and all related classes and drivers, fixing behaviour and correctness
 * separating telescope physical and sky coordinates, enabling TP model to be computed correctly in all cases
 * interconnected with significat update of several mount drivers (gemini, d50)
 * rts2-tpm was also repaired and improved to reflect current changes and actual needs
 * IMPORTANT NOTICE: the value (sign) of elementary mount-specific haZero/decZero parameters has been changed for most cases. The code in SVN reflects this change, but please take care of it in case you use non-default values. We stress the need of undertaking local tests, as fatal telescope collision may follow as consequence of incorrect setup.

2014-07-11
 * added option to print expansion from obtained image FITS header to rts2-nightreport

2014-06-24
 * queue_nrep, queue_at_nrep selector commands and their documentation

2014-06-06
 * I command (take image, leave shutter as it is)

2014-04-27
 * -s option for rts2-json, rts2-bb-json script

2014-04-24
 * Added support for binning (tested on iXon 1K x 1K emccd) - Shashikiran Ganesh <shashi@prl.res.in>

2014-04-16
 * rep_n and rep_separation are saved to the database

2014-04-15
 * addParkPosOption, createParkPos Telescope class methods

2014-04-10
 * rep_n and rep_separation queue entries parameters

2014-03-12
 * added skip command

2014-03-06
 * flat_beginning, flat_ending and friends
 * set deamon values from command line

2014-01-02
 * MI Filter wheel driver

2013-12-28
 * queue's check target length field

0.9.5
=====

2013-12-1
 * Added SI3097 support

2013-07-26