@@ -1,0 +1,6 @@
+bin_PROGRAMS = rts2_gsc
+
+LDADD = -L../../lib/rts2 -lrts2 @LIB_NOVA@
+AM_CXXFLAGS = @NOVA_CFLAGS@ -I../../include
+
+rts2_gsc_SOURCES = gsc.cpp
