@@ -1,3 +1,6 @@
+2016-06-10
+ * cat for catalogue query services
+
 2015-11-29
  * G(PL)-Point telescope pointing modelling
  * rts2-model options for GPoint
